# auto-parser

./: README.md  auto-parser.cabal
app/: Main.hs
src/: AutoParser.hs  AutoPrinter.hs  GenericPrinter.hs  Playground.hs
