cabal-version:      3.0
name:               auto-parser
version:            0.1.0.0
-- synopsis:
-- description:
author:             Andrew Shulaev
maintainer:         ash.drone@gmail.com
-- copyright:
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.1.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable auto-parser
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.18.1.0,
        auto-parser

    hs-source-dirs:   app
    default-language: Haskell2010
