cabal-version:      3.0
name:               auto-parser
version:            0.1.0.0
-- synopsis:
-- description:
author:             Andrew Shulaev
maintainer:         ash.drone@gmail.com
-- copyright:
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common common
    ghc-options: -Wall
    build-depends:
        base ^>=4.18.1.0,
        megaparsec,
        text
    default-extensions:
        DefaultSignatures,
        FlexibleContexts

library
    import:           common
    exposed-modules:
        AutoParser,
        AutoPrinter
    -- other-modules:
    -- other-extensions:
    hs-source-dirs:   src
    default-language: Haskell2010

executable auto-parser
    import:           common
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        auto-parser
    default-extensions:
        DeriveGeneric

    hs-source-dirs:   app
    default-language: Haskell2010
