cabal-version:      3.0
name:               auto-parser
version:            0.1.0.0
author:             Andrew Shulaev
maintainer:         ash.drone@gmail.com
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common common
    ghc-options: -Wall
    build-depends:
        base ^>=4.18.1.0,
        megaparsec,
        parser-combinators,
        text
    default-extensions:
        DataKinds,
        DefaultSignatures,
        DeriveGeneric,
        FlexibleContexts,
        FlexibleInstances,
        KindSignatures,
        OverloadedStrings,
        ScopedTypeVariables,
        TypeOperators

library
    import:           common
    exposed-modules:
        AutoParser,
        AutoPrinter,
        GenericPrinter,
        Playground
    hs-source-dirs:   src
    default-language: Haskell2010

executable auto-parser
    import:           common
    main-is:          Main.hs
    build-depends:
        auto-parser

    hs-source-dirs:   app
    default-language: Haskell2010
